Version 1.0.1, changed method names for upload
